--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,19 +1,3 @@
-.App {
-    text-align: center;
-}
-
-.App-logo {
-    animation: App-logo-spin infinite 20s linear;
-    height: 80px;
-}
-
-.App-header {
-    background-color: #222;
-    color: white;
-    height: 150px;
-    padding: 20px;
-}
-
-.App-intro {
-    font-size: large;
+#hero:hover {
+    background-color: #00d1b2;
 }
