--- a/src/index.css
+++ b/src/index.css
@@ -34,13 +34,13 @@ button:hover {
     background-color: #cfd8dc;
 }
 
-.delete-button {
+button.delete-button {
+    float: right;
     background-color: #d83b01;
     color: white;
-    float: right;
-    font-size: 12px;
     padding: 4px;
     position: relative;
+    font-size: 12px;
 }
 
 div {
@@ -48,36 +48,39 @@ div {
 }
 
 .selected {
-    background-color: #0078d7;
+    background-color: #cfd8dc !important;
+    background-color: #0078d7 !important;
     color: white;
 }
 
 .heroes {
     float: left;
-    list-style-type: none;
     margin: 0 0 2em 0;
+    list-style-type: none;
     padding: 0;
 }
 
 .heroes li {
-    background-color: #eee;
-    border-radius: 4px;
     cursor: pointer;
-    height: 3.0em;
+    position: relative;
     left: 0;
+    background-color: #eee;
     margin: .5em;
     padding: .5em;
-    position: relative;
+    height: 3.0em;
+    border-radius: 4px;
     width: 17em;
 }
 
 .heroes li:hover {
+    color: #607d8b;
     color: #0078d7;
     background-color: #ddd;
     left: .1em;
 }
 
 .heroes li.selected:hover {
+    /*background-color: #BBD8DC !important;*/
     color: white;
 }
 
@@ -95,50 +98,53 @@ div {
 }
 
 .heroes .badge {
-    background-color: #86b7dd;
-    border-radius: 4px 0 0 4px;
-    color: white;
+    /* display: inline-block; */
     float: left;
     font-size: small;
-    height: 3.0em;
-    left: -1px;
-    line-height: 1em;
-    margin-right: .8em;
+    color: white;
     padding: 0.7em 0.7em 0 0.5em;
+    background-color: #607d8b;
+    background-color: #0078d7;
+    background-color: #86b7dd;
+    line-height: 1em;
     position: relative;
+    left: -1px;
     top: -4px;
+    height: 3.0em;
+    margin-right: .8em;
+    border-radius: 4px 0 0 4px;
     width: 1.2em;
 }
 
 .header-bar {
     background-color: #0078d7;
     height: 4px;
-    margin-bottom: 10px;
     margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 label {
-    color: #888;
     display: inline-block;
-    margin: .5em 0;
     width: 4em;
+    margin: .5em 0;
+    color: #888;
 }
 
 label.value {
-    font-size: 14px;
     margin-left: 10px;
+    font-size: 14px;
 }
 
 input {
-    font-size: 1em;
     height: 2em;
+    font-size: 1em;
     padding-left: .4em;
 }
 
 input::placeholder {
     color: lightgray;
-    font-size: 12px;
     font-weight: normal;
+    font-size: 12px;
     letter-spacing: 3px;
 }
 
@@ -147,9 +153,9 @@ input::placeholder {
 }
 
 .editarea input {
-    color: #0078d7;
-    height: 20px;
     margin: 4px;
+    height: 20px;
+    color: #0078d7;
 }
 
 .editarea button {
